--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           node-version: 18.x
       - run: npm ci
+      - run: npm run build
 
   publish-npm:
     needs: build
@@ -24,6 +25,7 @@ jobs:
           node-version: 18.x
           registry-url: https://registry.npmjs.org/
       - run: npm ci
+      - run: npm run build
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
